Fix emotes left spacing in replies for the IRC layout

--- a/res/css/views/rooms/_IRCLayout.scss
+++ b/res/css/views/rooms/_IRCLayout.scss
@@ -137,6 +137,12 @@ $irc-line-height: $font-18px;
     }
 
     .mx_ReplyThread {
+        .mx_EventTile_emote {
+            > .mx_EventTile_avatar {
+                margin-left: initial;
+            }
+        }
+
         .mx_MessageTimestamp {
             width: initial;
         }
